[tool.poetry]
name = "here-env"
version = "0.1.0"
description = "Small helper to create and active virtuel environments."
authors = ["Simon Westphahl <simon@westphahl.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
here-env = "here_env:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
